# gainsay

./: .gitignore  CONSTITUTION.md  LICENSE  NOTICE  README.md  gainsay.py  gainsay_web.py  lens_report.py  lens_verify.py  pyproject.toml  requirements.txt  web.py
gainsay/: __init__.py  __main__.py  lens_agent.py  lens_history.py  lens_report.py  lens_rerank.py  lens_scholar.py  lens_verify.py  rag.py  translate.py  web.py  webapp.py
lens_web/: index.html
