[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gainsay"
version = "1.0.0"
description = "Local, privacy-first cited-answer + disagreement engine: cites its sources, then shows where they agree and contradict. RAG over a local Ollama model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "salpenr", email = "salpenr@users.noreply.github.com" }]
keywords = [
  "rag", "llm", "ollama", "cited-answers", "disagreement",
  "local-first", "privacy", "answer-engine", "retrieval-augmented-generation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Text Processing :: Indexing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy",
  "beautifulsoup4",
  "charset-normalizer",
]

[project.optional-dependencies]
translate = ["argostranslate"]

[project.urls]
Homepage = "https://github.com/salpenr/gainsay"
Repository = "https://github.com/salpenr/gainsay"

[project.scripts]
gainsay = "gainsay:main"
gainsay-web = "gainsay.webapp:main"

[tool.setuptools]
packages = ["gainsay"]
include-package-data = true

[tool.setuptools.package-data]
gainsay = ["lens_web/*"]
